# prism

./: .dockerignore  .gitignore  CONTRIBUTING.md  DECISIONS.md  Dockerfile.dev  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: country-mind-ci.yml
benchmark/: BENCHMARK_REPORT.md  run_benchmark.sh
benchmark/edge-model-outputs/: timings.tsv
benchmark/edge-model-prompts/: prompts.json
data/hungary/: briefs.json  candidates.json  constituencies.json  contributions.json  parties.json  scored-candidates.json  summaries.json
data/uk/: source_registry.v1.json
docker/: local-entrypoint.sh
docs/: AI_ARCHITECTURE.md  APP_UX.md  APP_VISION.md  CONTRIBUTION_PROTOCOL.md  COUNTRY_MIND.md  EDGE_MODEL_BENCHMARK_PLAN.md  EDGE_MODEL_BENCHMARK_RESULTS.md  EDGE_MODEL_DECISION.md  HIVE_VISUAL_SPEC.md  HUMANITARIAN_CHARTER.md  HUNGARY_INTELLIGENCE_PIPELINE.md  HUNGARY_PILOT_PLAN.md  HU_PARTY_POSITIONS.md  HU_QUIZ_SPEC.md  LOCAL_INTELLIGENCE.md  PHONE_APP_MVP_SPEC.md  SYNC_PROTOCOL.md  WEBSITE.md
mobile/: .gitignore  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/components/: Chip.tsx  PrismButton.tsx  PrismScreen.tsx  PulseOrb.tsx  SectionCard.tsx  SettingToggle.tsx  SyncStatusBanner.tsx
mobile/data/: countries.ts
mobile/lib/: briefs.ts  profile.ts  sync.ts
mobile/theme/: colors.ts  (+2 more)
scripts/: generate_briefs.py  generate_summaries.py  merge_intelligence.py  refresh_nvi.py  test_country_mind.sh
tests/: test_api.py  test_slice1.py  test_smoke.py
website/: README.md  package-lock.json  package.json  vercel.json
(+2628 files in other folders)
